welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: reassignment to val
				j=j+1
                                 ^Poucet:13: error: reassignment to val
				j=j+1
                                 ^